# PhD_Codes_Ju_Py

./: constantes.py
Bash_routine/: Bar_Progression.sh  commande.sh  commande_grille.sh
Jupyter/: Functions.py  JWST_Line_Check_Orion_CO.ipynb  Model_Study_CO_update.ipynb  Untitled.ipynb  test.py
Jupyter/.ipynb_checkpoints/: Model_Study_CO_update-checkpoint.ipynb
Other/: import tkinter as tk.py
Package/: pyproject.toml
Package/MISap/: pyproject.toml
fiches/: coe.aux  coe.out  coe.tex  coe.toc
pyismtools-main/: Demo_notebook.ipynb  README  setup.py
pyismtools-main/Example_notebooks/: Fitting_single_pointing_observations.ipynb
pyismtools-main/Example_notebooks/.ipynb_checkpoints/: Fitting_observation_maps-checkpoint.ipynb  Fitting_single_pointing_observations-checkpoint.ipynb
pyismtools-main/Test_data/: OrionBar_JWST_light.txt  OrionBar_JWST_molecular_PDR_intensities.txt  atomic_PDR_intensities.txt  name_correspondance_BackgroundPDR.txt  name_correspondance_OrionBarPDR.txt
pyismtools-main/pyismtools/: __init__.py  classes.py  ismdb_api.py  mcmc_uncertainties.py  utils.py  viz_tools.py
pyismtools-main/pyismtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyismtools-main/pyismtools/ismdbclient/application/ismdb/: ismdb_view.py
pyismtools-main/pyismtools/ismdbclient/application/protocols/: ismdb_rview.py  rview.py
pyismtools-main/pyismtools/ismdbclient/application/rview/: rview.py
pyismtools-main/pyismtools/utils2/: func.py  net.py  pubsub.py  utils.py
pyismtools-main/pyismtools/utils2/domain/: model2.py  protocols.py
(+5 files in other folders)
