[project]
name = "misap"
version = "0.1.0"
description = "Package gathering everything needed in my PhD Aurelien Piluso 2024-2027"
authors = [
    {name = "AurelienPls",email = "aurelien.piluso@obspm.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sklearn (>=0.0.post12,<0.1)",
    "scipy (>=1.15.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pilu", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
